# BeautyCamera

./: README.md  local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/beautycamera/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  FaceTrack.cpp  FaceTrack.h  native-lib.cpp
app/src/main/cpp/FaceAlignment/: CMakeLists.txt
app/src/main/java/com/example/beautycamera/: MainActivity.java  MyGLRenderer.java  MyGLSurfaceView.java
app/src/main/java/com/example/beautycamera/face/: Face.java  FaceTrack.java
app/src/main/java/com/example/beautycamera/filter/: BaseFilter.java  BaseFrameFilter.java  BigEyeFilter.java  CameraFilter.java  ScreenFilter.java
app/src/main/java/com/example/beautycamera/record/: MyEGL.java  MyMediaRecorder.java
app/src/main/java/com/example/beautycamera/utils/: BufferHelper.java  CameraHelper.java  FileUtil.java  ShaderHelper.java  TextResourceReader.java  TextureHelper.java
app/src/main/java/com/example/beautycamera/view/: MyRecordButton.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/raw/: base_fragment.glsl  base_vertex.glsl  bigeye_fragment.glsl  camera_fragment.glsl  camera_vertex.glsl
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
